# neptune-benchmark

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/neptune_benchmark/: auth.py  cli.py  client.py  config.py  constants.py  generate_run_data.py  generate_runs.py  locustfile.py  request.py  settings.py  stats.py  utils.py
src/neptune_benchmark/generate/: __init__.py  generate_run_data.py  generate_runs.py
